[web]Mod: issue #5707 fix news title overflow problem on mobile

--- a/source/web/src/static/styles/news.less
+++ b/source/web/src/static/styles/news.less
@@ -35,6 +35,10 @@ body{
         right: 0;
         width: 170px;
         text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -o-text-overflow:ellipsis;
 
         img {
             height:5px;
